--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --open",
     "build": "run-p type-check \"build-only {@}\" --",
     "preview": "vite preview",
     "test:unit": "vitest",
@@ -14,6 +14,7 @@
     "type-check": "vue-tsc --build --force"
   },
   "dependencies": {
+    "element-plus": "^2.3.3",
     "pinia": "^2.1.7",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
@@ -28,7 +29,10 @@
     "@vue/tsconfig": "^0.5.1",
     "cypress": "^13.7.2",
     "jsdom": "^24.0.0",
+    "node-sass": "^9.0.0",
     "npm-run-all2": "^6.1.2",
+    "sass": "^1.77.5",
+    "sass-loader": "^14.2.1",
     "start-server-and-test": "^2.0.3",
     "typescript": "~5.4.0",
     "vite": "^5.2.8",
